# APT_CyberCriminal_Campagin_Collections

./: README.md  index.csv
.github/workflows/: main.yml
2013/2013.08.21.POISON_IVY/: LICENSE  PIVY-Graph.mtgx  README.md
2014/2014.08.05.Operation_Arachnophobia/: Arachnophobia.md5
2014/2014.08.18.Syrian_Malware_House_of_Cards/: KL_report_syrian_malware.IoCs
2014/2014.11.24.Ironman/: hash.txt
2014/2014.12.02.Operation_Cleaver/: cleaver.yar
2014/2014.12.12.Vinself/: hc128.py  vinself_stegano.py
2015/: Operation Pawn Storm Ramps up its Activities
2015/2015.01.22.Scarab_attackers_Russian_targets/: Scarab_IOCs_January_2015.txt
2015/2015.06.10.The_Mystery_of_Duqu_2_0/: 7c6ce6b6-fee1-4b7b-b5b5-adaff0d8022f.ioc
2015/2015.08.10.The_Italian_Connection_An_analysis_of_exploit_supply_chains_and_digital_quartermasters/: 20150717-HT-Exploit-Topology-Final.xlsx
2015/2015.08.20.new-activity-of-the-blue-termite-apt/: hash.txt
2015/2015.11.18.Destover/: IOCs.txt
2015/2015.11.18.tdrop2/: IOCs.txt
2015/2015.11.23.PEERING_INTO_GLASSRAT/: hash.txt
2016/: readme.txt
2019/2019.04.19.Funky_malware_format/funky_malware_formats/isfb_parser/: CMakeLists.txt  README.md  isfb_header.h  isfb_parser.cpp  isfb_parser.h  isfb_to_pe.cpp  isfb_to_pe.h  main.cpp  util.cpp  util.h
2019/2019.04.19.Funky_malware_format/funky_malware_formats/lotus_parser/: CMakeLists.txt  README.md  file_util.cpp  file_util.h  lotus_headers.cpp  lotus_headers.h  lotus_print.cpp  lotus_print.h  main.cpp
index/: generate_index.py  requirements.txt
other/: iranian_apit_groups_possible_commands.md
(+529 files in other folders)
